# glub

./: .env  .gitignore  README.md  server.ts  test.http
.github/ISSUE_TEMPLATE/: compatibility-mismatch.md  request-a-library.md
.github/workflows/: check_releases.yml  test_config.yml
.github/workflows/test_config/: action.yml
data/: CMakeLists.txt  compatibility.json
data/default/: exec.txt  exec_raw.txt  linkLibs.txt  linkLibs_raw.txt  main.h  submodules.txt  winapiwindow.h  window.h  xwindow.h
data/libraries/freetype/: meta.json
data/libraries/freetype/0.0.0/: init.cpp  setup.txt
data/libraries/glad/: meta.json
data/libraries/glad/0.0.0/: init.cpp  linkLib.txt  setup.txt
data/libraries/glew/: meta.json
data/libraries/glew/0.0.0/: init.cpp  linkLib.txt  setup.txt
data/libraries/glfw/: meta.json
data/libraries/glfw/3.0.4/: setup.txt  window.h
data/libraries/glm/: meta.json
data/libraries/glm/0.0.0/: setup.txt
data/libraries/imgui/: meta.json
data/libraries/imgui/0.0.0/: compile_options.txt  exec.txt  include.cpp  init.cpp  setup.txt  update.cpp
data/libraries/mathfu/: meta.json
data/libraries/mathfu/0.0.0/: setup.txt
data/libraries/sdl/: meta.json
data/libraries/sdl/2.0.0/: linkLib.txt  setup.txt  window.h
data/libraries/stb/: meta.json
data/libraries/stb/0.0.0/: init.cpp  setup.txt
src/: controller.ts  types.ts
src/controllers/: cmake.ts  compatibility.ts  cpp.ts  libraries.ts
src/utils/: loadLibraries.ts  logging.ts
tests/: check_releases.js  generate_project.js  write_result.js
